fixed reserved for spacing

--- a/app/assets/v2/css/bounty.css
+++ b/app/assets/v2/css/bounty.css
@@ -184,6 +184,11 @@ body {
   color: #717171;
 }
 
+@media (min-width: 1200px) {
+  .col-xl-4.bounty-info .bounty-info-row-span-right {
+    margin-right: 3.2em;
+  }
+}
 
 .started-status-column div {
   display: inline-block;
